--- a/viewer.html
+++ b/viewer.html
@@ -58,18 +58,50 @@
         </tbody>
     </table>
 
-    <script>
+    <script type="module">
+        // Firebase Import
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+        import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
+
+        // Firebase-Konfiguration
+        const firebaseConfig = {
+            apiKey: "AIzaSyAksVQRYriHb9gS7TjgeN3faX10IoKJBIw",
+            authDomain: "tischtennis-9575d.firebaseapp.com",
+            databaseURL: "https://tischtennis-9575d-default-rtdb.firebaseio.com",
+            projectId: "tischtennis-9575d",
+            storageBucket: "tischtennis-9575d.appspot.com",
+            messagingSenderId: "164931288159",
+            appId: "1:164931288159:web:5863d07a4cf511ee462fea"
+        };
+
+        // Firebase Initialisierung
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+
         const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
         const standingsTable = document.getElementById('standingsTable').querySelector('tbody');
-        const storedSchedule = localStorage.getItem('tischtennisSpielplan');
 
-        if (storedSchedule) {
-            const schedule = JSON.parse(storedSchedule);
+        // Echtzeitdaten abrufen
+        const scheduleRef = ref(db, 'spielplan');
+        onValue(scheduleRef, (snapshot) => {
+            const schedule = snapshot.val();
+            if (schedule) {
+                renderSchedule(schedule);
+            } else {
+                scheduleTable.innerHTML = `<tr><td colspan="4">Kein Spielplan verfügbar</td></tr>`;
+                standingsTable.innerHTML = `<tr><td colspan="6">Keine Ergebnisse verfügbar</td></tr>`;
+            }
+        });
+
+        function renderSchedule(schedule) {
+            scheduleTable.innerHTML = ''; // Spielplan-Tabelle leeren
+            standingsTable.innerHTML = ''; // Zwischenstand-Tabelle leeren
+
             const standings = {};
 
-            // Spielplan anzeigen und Punkte sowie Torverhältnis berechnen
+            // Spielplan und Zwischenstand berechnen
             schedule.forEach(game => {
-                // Spielplan einfügen
+                // Spielplan anzeigen
                 const row = `<tr>
                     <td>Spiel ${game.match}</td>
                     <td>${game.team1}</td>
@@ -80,44 +112,39 @@
 
                 // Punkte und Torverhältnis berechnen
                 if (game.result) {
-                    const [score1, score2] = game.result.split('-').map(Number); // Ergebnis im Format "X-Y"
+                    const [score1, score2] = game.result.split('-').map(Number);
                     if (!standings[game.team1]) standings[game.team1] = { points: 0, scored: 0, conceded: 0, goalDiff: 0 };
                     if (!standings[game.team2]) standings[game.team2] = { points: 0, scored: 0, conceded: 0, goalDiff: 0 };
 
-                    // Erzielte und erhaltene Punkte aktualisieren
                     standings[game.team1].scored += score1;
                     standings[game.team1].conceded += score2;
                     standings[game.team2].scored += score2;
                     standings[game.team2].conceded += score1;
 
-                    // Torverhältnis aktualisieren
                     standings[game.team1].goalDiff += score1 - score2;
                     standings[game.team2].goalDiff += score2 - score1;
 
-                    // Punkte vergeben
                     if (score1 > score2) {
-                        standings[game.team1].points += 1; // Team 1 gewinnt
+                        standings[game.team1].points += 1;
                     } else if (score1 < score2) {
-                        standings[game.team2].points += 1; // Team 2 gewinnt
+                        standings[game.team2].points += 1;
                     } else {
-                        standings[game.team1].points += 0.5; // Unentschieden
+                        standings[game.team1].points += 0.5;
                         standings[game.team2].points += 0.5;
                     }
                 }
             });
 
-            // Zwischenstand berechnen und sortieren
+            // Zwischenstand anzeigen
             const sortedStandings = Object.entries(standings)
                 .map(([team, data]) => ({ team, ...data }))
                 .sort((a, b) => {
-                    // Sortierung: Zuerst nach Punkten, dann nach Torverhältnis
                     if (b.points === a.points) {
                         return b.goalDiff - a.goalDiff;
                     }
                     return b.points - a.points;
                 });
 
-            // Zwischenstand anzeigen
             sortedStandings.forEach((entry, index) => {
                 const row = `<tr>
                     <td>${index + 1}</td>
@@ -129,9 +156,6 @@
                 </tr>`;
                 standingsTable.innerHTML += row;
             });
-        } else {
-            scheduleTable.innerHTML = `<tr><td colspan="4">Kein Spielplan verfügbar</td></tr>`;
-            standingsTable.innerHTML = `<tr><td colspan="6">Keine Ergebnisse verfügbar</td></tr>`;
         }
     </script>
 </body>
