--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team-Losung Tischtennis</title>
+    <style>
+        /* Deine CSS-Regeln */
+    </style>
+</head>
+<body>
+    <h1>Tischtennis-Team-Losung</h1>
+    <p>Füge Spielernamen hinzu, lasse Teams losen und erstelle einen Spielplan!</p>
+    <!-- Rest des Inhalts -->
+    <script type="module">
+        // Dein JavaScript-Code
+    </script>
+</body>
+</html>
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
     import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
