--- a/index.html
+++ b/index.html
@@ -110,65 +110,46 @@
             }
         }
 
-       function drawTeams() {
-    const teamTable = document.getElementById('teamTable').querySelector('tbody');
-    teamTable.innerHTML = '';
-    teams = [];
+        function drawTeams() {
+            const teamTable = document.getElementById('teamTable').querySelector('tbody');
+            teamTable.innerHTML = '';
+            teams = [];
 
-    if (players.length < 2) {
-        alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
-        return;
-    }
+            if (players.length < 2) {
+                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
+                return;
+            }
 
-    const shuffledPlayers = [...players];
-    shuffle(shuffledPlayers);
+            const shuffledPlayers = [...players];
+            shuffle(shuffledPlayers);
 
-    let teamCount = 1;
-    while (shuffledPlayers.length >= 2) {
-        const player1 = shuffledPlayers.pop();
-        const player2 = shuffledPlayers.pop();
-        const teamName = `Team ${teamCount}`;
-        const team = { player1, player2, teamName };
-        teams.push(team);
+            let teamCount = 1;
+            while (shuffledPlayers.length >= 2) {
+                const player1 = shuffledPlayers.pop();
+                const player2 = shuffledPlayers.pop();
+                const teamName = `Team ${teamCount}`;
+                teams.push({ player1, player2, teamName });
+                const row = `<tr>
+                    <td>${teamName}</td>
+                    <td>${player1}</td>
+                    <td>${player2}</td>
+                    <td>
+                        <input type="text" class="rename-input" 
+                               value="${teamName}" 
+                               onchange="updateTeamName(${teamCount - 1}, this.value)">
+                    </td>
+                </tr>`;
+                teamTable.innerHTML += row;
+                teamCount++;
+            }
 
-        const row = `<tr>
-            <td>${teamName}</td>
-            <td>${player1}</td>
-            <td>${player2}</td>
-            <td>
-                <input type="text" class="rename-input" 
-                       value="${teamName}" 
-                       onchange="updateTeamName(${teamCount - 1}, this.value)">
-            </td>
-        </tr>`;
-        teamTable.innerHTML += row;
-        teamCount++;
-    }
+            if (shuffledPlayers.length === 1) {
+                alert(`Der Spieler ${shuffledPlayers[0]} hat leider kein Team gefunden.`);
+            }
+        }
 
-    if (shuffledPlayers.length === 1) {
-        alert(`Der Spieler ${shuffledPlayers[0]} hat leider kein Team gefunden.`);
-    }
-
-    saveTeamsToFirebase(); // Teams in Firebase speichern
-}
-
-function saveTeamsToFirebase() {
-    set(ref(db, 'teams'), teams)
-        .then(() => {
-            console.log('Teams erfolgreich in Firebase gespeichert.');
-        })
-        .catch(error => {
-            console.error('Fehler beim Speichern der Teams:', error);
-        });
-}
-
-
-       function updateTeamName(teamIndex, newName) {
-    teams[teamIndex].teamName = newName; // Teamnamen im Array aktualisieren
-    console.log(`Team ${teamIndex + 1} umbenannt in: ${newName}`);
-    generateSchedule(); // Spielplan mit neuen Namen neu generieren
-}
-
+        function updateTeamName(teamIndex, newName) {
+            teams[teamIndex].teamName = newName;
         }
 
         function generateSchedule() {
