--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
         </thead>
         <tbody></tbody>
     </table>
-    <button onclick="saveTeamsToFirebase()">Änderungen speichern</button>
+    <button onclick="saveTeamsToFirebase()">Alle Änderungen speichern</button>
 
     <h3>Spielplan:</h3>
+    <button onclick="generateSchedule()">Spielplan erstellen</button>
     <table id="scheduleTable">
         <thead>
             <tr>
